# fake-youtube

./: .env.example  .gitignore  AGENT.md  README.md  index.html  package-lock.json  package.json  playlist-browser.config.example.json  tsconfig.json  vite.config.ts
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: config_commands.rs  db_commands.rs  mod.rs  playlist_commands.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 0001_initial.sql
src-tauri/src/models/: mod.rs  playlist.rs  video.rs
src-tauri/src/services/: app_config.rs  mod.rs  player_launcher.rs  playlist_parser.rs  sync.rs  youtube.rs
src/app/: App.tsx  AppShell.tsx
src/features/player/: playerState.ts
src/features/player/components/: PlaylistPlayer.test.tsx  PlaylistPlayer.tsx  VideoQueue.tsx
src/features/playlists/: PlaylistDetailView.tsx  PlaylistHomeView.tsx
src/features/playlists/components/: AddPlaylistForm.tsx  AppConfigForm.tsx  PlaylistList.test.tsx  PlaylistList.tsx
src/lib/: db.ts  errors.ts  tauri.ts  tauriRuntime.ts  types.ts
