[package]
name = "playlist-browser"
version = "0.1.0"
description = "Local desktop browser for YouTube playlists"
authors = ["Codex"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "playlist_browser"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["macros", "runtime-tokio-rustls", "sqlite"] }
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
thiserror = "2"
url = "2"

